include regression to results

--- a/nbs/Linear Regression.ipynb
+++ b/nbs/Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_labels = {\n",
+    "    \"CC_to_C_rate\": \"$CC$ to $C$ rate\",\n",
+    "    \"CD_to_C_rate\": \"$CD$ to $C$ rate\",\n",
+    "    \"DC_to_C_rate\": \"$DC$ to $C$ rate\",\n",
+    "    \"DD_to_C_rate\": \"$DD$ to $C$ rate\",\n",
+    "    \"SSE\": \"SSE\",\n",
+    "    \"Makes_use_of_game\": \"Make use of game\",\n",
+    "    \"Makes_use_of_length\": \"Make use of length\",\n",
+    "    \"Stochastic\": \"stochastic\",\n",
+    "    \"Cooperation_rating\": r\"$C_r$\",\n",
+    "    \"Cooperation_rating_max\": r\"$C_{max}$\",\n",
+    "    \"Cooperation_rating_min\": r\"$C_{min}$\",\n",
+    "    \"Cooperation_rating_median\": r\"$C_{median}$\",\n",
+    "    \"Cooperation_rating_mean\": r\"$C_{mean}$\",\n",
+    "    \"Cooperation_rating_comp_to_max\": r\"$C_r$ / $C_{max}$ \",\n",
+    "    \"Cooperation_rating_comp_to_min\": r\"$C_r$ / $C_{min}$\",\n",
+    "    \"Cooperation_rating_comp_to_median\": r\"$C_r$ / $C_{median}$\",\n",
+    "    \"Cooperation_rating_comp_to_mean\": r\"$C_r$ / $C_{mean}$\",\n",
+    "    \"turns\": r\"$n$\",\n",
+    "    \"noise\": r\"$p_n$\",\n",
+    "    \"probend\": r\"$p_e$\",\n",
+    "    \"Normalized_Rank\": r\"$r$\",\n",
+    "    \"Median_score\": \"Median score\",\n",
+    "    \"size\": r\"$N$\",\n",
+    "    \"memory_usage\": \"memory usage\",\n",
+    "    \"repetitions\": r\"$k$\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,10 +119,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -101,8 +134,8 @@
       "Dep. Variable:                      y   R-squared (uncentered):                   0.886\n",
       "Model:                            OLS   Adj. R-squared (uncentered):              0.886\n",
       "Method:                 Least Squares   F-statistic:                          4.347e+05\n",
-      "Date:                Thu, 30 Jan 2020   Prob (F-statistic):                        0.00\n",
-      "Time:                        14:12:25   Log-Likelihood:                      2.1510e+05\n",
+      "Date:                Mon, 03 Feb 2020   Prob (F-statistic):                        0.00\n",
+      "Time:                        17:46:38   Log-Likelihood:                      2.1510e+05\n",
       "No. Observations:             1005043   AIC:                                 -4.302e+05\n",
       "Df Residuals:                 1005025   BIC:                                 -4.299e+05\n",
       "Df Model:                          18                                                  \n",
@@ -147,7 +180,6 @@
     "df = dfs[0]\n",
     "    \n",
     "xs = features.copy()\n",
-    "\n",
     "xs += [\"turns\", \"memory_usage\"]\n",
     "        \n",
     "X = df[xs].values\n",
@@ -423,6 +455,404 @@
    "source": [
     "The $R$s of the models are larger than 0.8 which means that these model explain the 80% of the variance in the data. The models are good."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tables = []\n",
+    "rs = []\n",
+    "for i, a_type in enumerate(types):\n",
+    "    df = dfs[i]\n",
+    "\n",
+    "    xs = features.copy()\n",
+    "    if a_type == 'standard':\n",
+    "        xs += [\"turns\", \"memory_usage\"]\n",
+    "    if a_type == 'noise':\n",
+    "        xs += [\"noise\", \"turns\", \"memory_usage\"]\n",
+    "    if a_type == 'probend':\n",
+    "        xs += [\"probend\"]\n",
+    "    if a_type == 'probend_noise':    \n",
+    "        xs += [\"probend\", \"noise\"]\n",
+    "\n",
+    "    X = df[xs].values\n",
+    "    y = df['Normalized_Rank'].values\n",
+    "\n",
+    "    model = sm.OLS(y, X).fit()\n",
+    "    \n",
+    "    table = model.summary2(xname=xs)\n",
+    "    rs.append(table.tables[0][2][0] + table.tables[0][3][0])\n",
+    "    table = table.tables[1][['Coef.', 'P>|t|']].round(5)\n",
+    "    table.index = [features_labels[index] for index in table.index]\n",
+    "    \n",
+    "    tables.append(table)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda3/envs/axlml/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Coef.</th>\n",
+       "      <th>P&gt;|t|</th>\n",
+       "      <th>Coef.</th>\n",
+       "      <th>P&gt;|t|</th>\n",
+       "      <th>Coef.</th>\n",
+       "      <th>P&gt;|t|</th>\n",
+       "      <th>Coef.</th>\n",
+       "      <th>P&gt;|t|</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>$CC$ to $C$ rate</th>\n",
+       "      <td>-0.050</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.073</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.009</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.009</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$CD$ to $C$ rate</th>\n",
+       "      <td>0.298</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.018</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.192</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.072</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$C_r$</th>\n",
+       "      <td>-0.701</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.959</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.348</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.383</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$C_r$ / $C_{max}$</th>\n",
+       "      <td>2.587</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>2.389</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.679</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.348</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$C_r$ / $C_{mean}$</th>\n",
+       "      <td>-1.488</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.492</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-1.380</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.070</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$C_r$ / $C_{median}$</th>\n",
+       "      <td>-0.189</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.026</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.455</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.010</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$C_r$ / $C_{min}$</th>\n",
+       "      <td>0.086</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.268</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.108</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.202</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$C_{max}$</th>\n",
+       "      <td>1.961</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.544</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>1.411</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.780</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$C_{mean}$</th>\n",
+       "      <td>-2.538</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-2.369</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-2.578</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-1.192</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$C_{median}$</th>\n",
+       "      <td>0.511</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.079</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.470</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.212</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$C_{min}$</th>\n",
+       "      <td>-0.079</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.366</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.133</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.218</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$DC$ to $C$ rate</th>\n",
+       "      <td>0.203</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.137</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.020</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.084</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$DD$ to $C$ rate</th>\n",
+       "      <td>0.092</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.293</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.088</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.248</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$N$</th>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.713</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$k$</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.997</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.013</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$n$</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$p_e$</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>-0.052</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>$p_n$</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.059</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-0.060</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SSE</th>\n",
+       "      <td>0.198</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.048</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.102</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.106</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>memory usage</th>\n",
+       "      <td>-0.008</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.250</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Coef.  P>|t|  Coef.  P>|t|  Coef.  P>|t|  Coef.  P>|t|\n",
+       "$CC$ to $C$ rate     -0.050  0.000 -0.073  0.000  0.009  0.000  0.009    0.0\n",
+       "$CD$ to $C$ rate      0.298  0.000 -0.018  0.000  0.192  0.000  0.072    0.0\n",
+       "$C_r$                -0.701  0.000 -0.959  0.000  0.348  0.000 -0.383    0.0\n",
+       "$C_r$ / $C_{max}$     2.587  0.000  2.389  0.000  1.679  0.000  1.348    0.0\n",
+       "$C_r$ / $C_{mean}$   -1.488  0.000 -0.492  0.000 -1.380  0.000 -0.070    0.0\n",
+       "$C_r$ / $C_{median}$ -0.189  0.000  0.026  0.000  0.455  0.000 -0.010    0.0\n",
+       "$C_r$ / $C_{min}$     0.086  0.000 -0.268  0.000  0.108  0.000 -0.202    0.0\n",
+       "$C_{max}$             1.961  0.000  1.544  0.000  1.411  0.000  0.780    0.0\n",
+       "$C_{mean}$           -2.538  0.000 -2.369  0.000 -2.578  0.000 -1.192    0.0\n",
+       "$C_{median}$          0.511  0.000 -0.079  0.000  0.470  0.000 -0.212    0.0\n",
+       "$C_{min}$            -0.079  0.000 -0.366  0.000 -0.133  0.000 -0.218    0.0\n",
+       "$DC$ to $C$ rate      0.203  0.000  0.137  0.000 -0.020  0.000  0.084    0.0\n",
+       "$DD$ to $C$ rate      0.092  0.000  0.293  0.000  0.088  0.000  0.248    0.0\n",
+       "$N$                  -0.000  0.000 -0.000  0.000 -0.000  0.713 -0.000    0.0\n",
+       "$k$                   0.000  0.002  0.000  0.997  0.000  0.013  0.000    0.0\n",
+       "$n$                   0.000  0.000 -0.000  0.000    NaN    NaN    NaN    NaN\n",
+       "$p_e$                   NaN    NaN    NaN    NaN  0.004  0.125 -0.052    0.0\n",
+       "$p_n$                   NaN    NaN -0.059  0.000    NaN    NaN -0.060    0.0\n",
+       "SSE                   0.198  0.000 -0.048  0.000 -0.102  0.000 -0.106    0.0\n",
+       "memory usage         -0.008  0.000  0.000  0.250    NaN    NaN    NaN    NaN"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat(tables, axis=1).round(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda3/envs/axlml/lib/python3.6/site-packages/ipykernel_launcher.py:2: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "of pandas will change to not sort by default.\n",
+      "\n",
+      "To accept the future behavior, pass 'sort=False'.\n",
+      "\n",
+      "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
+      "\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "file = open('../paper/regression_results.tex', \"w\")\n",
+    "file.write(pd.concat(tables, axis=1).round(3).to_latex().replace('\\$', '$').replace('\\_', ('_')))\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Adj. R-squared (uncentered):0.886',\n",
+       " 'Adj. R-squared (uncentered):0.912',\n",
+       " 'Adj. R-squared (uncentered):0.900',\n",
+       " 'Adj. R-squared (uncentered):0.895']"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
