fixes the discussion on the top performances and on the evaluation approaches

--- a/paper/performance_probend_noise_subset_table.tex
+++ b/paper/performance_probend_noise_subset_table.tex
@@ -1,21 +1,21 @@
-\begin{tabular}{lc}
+\begin{tabular}{lr}
 \toprule
-Name                      &    $\bar{r}$\\
+Name                      &      $\bar{r}$\\
 \midrule
-Defector                  &    0.00552 \\
-Better and Better         &    0.01055 \\
-Aggravater                &    0.01399 \\
-Fortress4                 &    0.02100 \\
-Tricky Defector           &    0.03857 \\
-Meta Winner Long Memory   &    0.04878 \\
-Meta Winner Memory One    &    0.04955 \\
-Meta Winner Finite Memory &    0.04972 \\
-Meta Winner Stochastic    &    0.05128 \\
-Meta Winner Deterministic &    0.05195 \\
-Meta Winner               &    0.05333 \\
-Meta Winner Ensemble      &    0.05882 \\
-Fortress3                 &    0.06956 \\
-CollectiveStrategy        &    0.07692 \\
-Prober 3                  &    0.08018 \\
+Raider                    &      0.022 \\
+MEM2                      &      0.037 \\
+Prober 3                  &      0.039 \\
+Evolved FSM 16 Noise 05   &      0.048 \\
+Hard Prober               &      0.072 \\
+Spiteful Tit For Tat      &      0.078 \\
+Better and Better         &      0.089 \\
+Grudger                   &      0.091 \\
+Fortress4                 &      0.096 \\
+Meta Winner Memory One    &      0.099 \\
+NMWE Long Memory          &      0.099 \\
+Nice Meta Winner          &      0.104 \\
+NMWE Deterministic        &      0.109 \\
+NMWE Memory One           &      0.112 \\
+Nice Meta Winner Ensemble &      0.115 \\
 \bottomrule
 \end{tabular}
