--- a/paper/main.tex
+++ b/paper/main.tex
@@ -311,7 +311,7 @@ multiple entries their performance is evaluated based on the
 
 \begin{figure}[!htbp]
     \centering
-    \includegraphics[width=.6\textwidth]{../images/tit_for_tat_r_distributions.pdf}
+    \includegraphics[width=.60\textwidth]{../images/tit_for_tat_r_distributions.pdf}
     \caption{Tit For Tat's $r$ distribution in tournaments. The best performance
     of the strategy has been in standard tournaments where it achieved a $\bar{r}$
     of 0.34.}
@@ -347,10 +347,9 @@ specific setting was anticipated. DoubleCrosser, and Fool Me Once, are
 strategies not from the literature but from the APL. DoubleCrosser
 is a strategy that makes use of the number of turns because it is set to defect on
 the last two rounds. The strategy was expected to not perform as well in
-tournaments where the number of turns is not specified, but the strategy did not
-perform well in tournaments with noise either. Finally, Winner
+tournaments where the number of turns is not specified. Finally, Winner
 12~\cite{mathieu2017} and DBS~\cite{Au2006} are both from the the literature.
-DBS is strategy specifically designed for noisy environments, however, it ranks
+DBS is a strategy specifically designed for noisy environments, however, it ranks
 highly in standard tournaments as well.
 
 Figure~\ref{fig:std_results} gives the distributions of $r$ for the top
@@ -365,51 +364,20 @@ the number of turns.
     \caption{$r$ distributions of top 15 strategies in standard tournaments.}\label{fig:std_results}
 \end{figure}
 
-The top strategies in noisy tournaments are shown in Figure~\ref{fig:noisy_results}. These include deterministic strategies, such
-as Tit For 2 Tats~\cite{Axelrod1980b}, Slow Tit For Two Tats~\cite{axelrodproject}, Hard Tit For 2 Tats~\cite{Stewart2012}
-and Cycler CCCCCD, and strategies which decide their actions based on the
-cooperations to defections ratio, such as ShortMem~\cite{Carvalho2013}, Grumpy
-and $e$~\cite{axelrodproject}. Slow Tit For Two Tats is the same strategy as 
-Tit For 2 Tats, and at the time of writing this manuscript the
-contributors of~\cite{axelrodproject} made a new release where the strategy
-has been removed. However, for the purpose of this work the strategy is kept.
-The Retaliate and
-Limited Retaliate strategies are implemented in APL by the
-same contributor. They are strategies designed to defect if the opponent has
-tricked them more often than \(x\%\) of the times that they have
-done the same. Finally, in $4^{\text{th}}$ and $9^{\text{th}}$ place are Hunter
-strategies which trying to extort, equivalently, strategies that play cyclically
-and defectors.
-
-From Figure~\ref{fig:noisy_results}, it is evident that the normalised rank
-distributions in noisy environments are more variant with higher medians
-compared to standard tournaments. The distributions are bimodal. This indicates
-that although the top ranked strategies mainly performed well, there are several
-tournaments that they ranked in the bottom half. The bimodality of the \(r\)
-distributions can be explained by Figure~\ref{fig:noisy_results} which gives the
-\(r\) distributions for the top 6 strategies over the noise probability \(p_n\).
-Note that for \(p_n=0.5\) a strategy corresponds to a random player and for
-\(p_n=1\) a strategy is behaving in the exact opposite way than its design.
-
-\begin{figure}[!htbp]
-    \centering
-    \includegraphics[width=.7\textwidth]{../images/performance_noise.pdf}
-    \caption{\(r\) distributions for best performed strategies in noisy tournaments.}
-    \label{fig:noisy_results}
-\end{figure}
-
-From Figure~\ref{fig:effect_of_noise} it is evident that the strategies highly
-ranked in noisy environments did so because of their performance in tournaments
-with \(p_n>0.5\). In tournaments with a noise probability lower than \(0.5\) the
-strategies performed poorly which is why their \(r\) distributions are bimodal.
-If during the data collection a \(p_n\) strictly less 0.5 was considered then the top ranked strategies would be
-different. There are a total of 5661 trials where \(p_n<0.5\) and the top ranked
-strategies are given in Table~\ref{table:subset_noise_result}. The median ranks
-are lower than before and the top spots are mainly overtaken by Meta strategies
-which include NMWE deterministic and NMWE Long Memory. The Meta
-strategies~\cite{axelrodproject} create a team of strategies for themselves and
-choose to play as a member of their team based on their scores against a given
-opponent.
+In noisy tournaments the top strategies differ when \(p_n\) is restricted and
+when it is not. The \(r\) distributions of the top 6 strategies when \(p_n\in
+[0, 1]\) are given by Figure~\ref{fig:effect_of_noise}. It is evident that these
+strategies were highly ranked due to the their performance in tournaments with
+\(p_n>0.5\), and that in tournaments with a noise probability lower than \(0.5\) they
+performed poorly. In comparison, when considering a \(p_n < 0.1\) the
+performances of the top strategies are more stable,
+Figure~\ref{fig:noise_results}. The top strategies in noisy tournaments with
+\(p_n < 0.1\) include DBS, Evolved FSM 16 Noise 05, Evolved ANN 5 Noise 05, PSO
+Gambler 2 2 2 Noise 05 and Omega Tit For Tat~\cite{kendall2007iterated} which
+are strategies specifically designed for noisy tournaments, strategies such as
+BackStabber, DoubleCrosser, Evolved ANN, FSM and HMM which performed well in
+standard tournaments as well, and deterministic strategies such as Spiteful Tit For
+Tat~\cite{prison}, Level Punisher~\cite{Eckhart2015}, Eugine Nier~\cite{lesswrong}.
 
 \begin{figure}[!htbp]
     \centering
@@ -419,61 +387,25 @@ opponent.
     \label{fig:effect_of_noise}
 \end{figure}
 
-% \begin{table}[!htbp]
-%     \centering
-%     \resizebox{.30\textwidth}{!}{
-%     \input{performance_noise_subset_table.tex}}
-%     \caption{Top performances in 5661 noisy tournaments where \(p_n<0.5\).}\label{table:subset_noise_result}
-% \end{table}
-
-The 15 top ranked strategies in probabilistic ending tournaments include
-Fortress 3, Fortress 4 (both introduced in~\cite{Ashlock2006}),
-Raider~\cite{Ashlock2014} and Solution B1~\cite{Ashlock2014}, which are
-strategies based on finite state automata introduced by Daniel Ashlock and Wendy
-Ashlock. These strategies have been evolved using reinforcement learning, however,
-there were trained to maximise their payoffs in tournaments with fixed turns
-(150 specifically) and not in probabilistic ending ones. In probabilistic ending
-tournaments it appears that the top ranks are mostly occupied by defecting
-strategies. These include Better and Better, Gradual Killer, Hard Prober (all
-from ~\cite{prison}), Bully (Reverse Tit For Tat)~\cite{Nachbar1992} and
-Defector. Thus, it's surprising that EasyGo and Fool Me Forever which are
-strategies that will defect until their opponent defects, then they will cooperate
-until the end, ranked $14^{\text{th}}$ and $15^{\text{th}}$. Upon inspection,
-it was found that they are actually the same strategy. This was not known to
-the authors at the time of data collection. Figure~\ref{fig:probend_results}
-verifies that their performance is the same. Both strategies have repeatedly
-ranked highly and there are cases for which they were the winners of the
-tournament.
-
-The distributions of the normalised rank in probabilistic ending tournaments,
-shown in
-Figure~\ref{fig:probend_results}, are less variant than those of noisy
-tournaments. The medians of the top 15 strategies are lower than 0.1 and the distributions are skewed
-towards 0. Though the large difference between the means and the medians
-indicates some outliers, the strategies have overall performed well in the
-probabilistic ending tournaments that they participated.
-
-\begin{figure}[h!]
+\begin{figure}[!htbp]
     \centering
-    \includegraphics[width=.7\textwidth]{../images/performance_probend.pdf}
-    \caption{\(r\) distributions for best performed strategies in probabilistic ending tournaments.}
-    \label{fig:probend_results}
+    \includegraphics[width=.7\textwidth]{../images/noise_performance_subset.pdf}
+    \caption{$r$ distributions of top 15 strategies in 1151 noisy tournaments with \(p_n < 0.1\).}\label{fig:noise_results}
 \end{figure}
 
-The distributions of \(r\) for the top 6 strategies in probabilistic ending
-tournaments over \(p_e\) are given in Figure~\ref{fig:effect_of_probend}.
-Figure~\ref{fig:effect_of_probend} shows that the 6 strategies start of with a
-high median rank, however, their ranked decreased as the the probability of the
-game ending increased and at the point of \(p_e=0.1\) they became the dominant
-strategies in their respective tournaments. In essence, what is demonstrated is
-that defecting strategies did better when the likelihood of the game ending in
-the next turn increased, which is inline with the Folk
-Theorem~\cite{Fudenberg2009}. If tournaments where the probability of the game
-ending was less than 0.1 were considered then the the top ranked spots are not
-dominated by just defecting strategies anymore,
-Table~\ref{table:subset_probend_result}. Instead the effective strategies are
-now the Meta strategies, trained strategies, Grudger~\cite{axelrodproject} and
-Spiteful Tit for Tat~\cite{prison}.
+In probabilistic ending tournaments it appears that the top ranks are mostly
+occupied by defecting strategies and a series of strategies based on finite state
+automata introduced by Daniel Ashlock and Wendy Ashlock; Fortress 3, Fortress 4
+(both introduced in~\cite{Ashlock2006}), Raider~\cite{Ashlock2014} and
+Solution B1~\cite{Ashlock2014}. Values of \(p_e > 0.5\) effectively turn an IPD
+match to a one/two shot game, thus it is not surprise that defecting strategies
+perform well. From Figure~\ref{fig:effect_of_probend}, which gives the
+distributions of \(r\) for the top 6 strategies in probabilistic ending tournaments
+over \(p_e\), shows that at the point of \(p_e=0.1\) defecting strategies become
+the dominant strategies in their respective tournaments. In essence, what is
+demonstrated in Figure~\ref{fig:effect_of_probend} is that defecting strategies
+do better when the likelihood of the game ending in the next turn increased,
+which is inline with the Folk Theorem~\cite{Fudenberg2009}.
 
 \begin{figure}[!htbp]
     \centering
@@ -483,28 +415,41 @@ Spiteful Tit for Tat~\cite{prison}.
     \label{fig:effect_of_probend}
 \end{figure}
 
-% \begin{table}[!htbp]
-%     \centering
-%     \resizebox{.30\textwidth}{!}{
-%     \input{performance_probend_subset_table.tex}}
-%     \caption{Top performances in 1139 probabilistic ending tournaments with \(p_e < 0.1\)}
-%     \label{table:subset_probend_result}
-% \end{table}
+The top spots are not not dominated by just defecting strategies anymore when
+\(p_e < 0.1\) is considered, Table~\ref{table:top_performances}. The effective
+strategies are now Meta strategies which include Nice Meta Winner, NMWE Finite
+Memory, NMWE Deterministic, trained strategies, Grudger~\cite{axelrodproject}
+and Spiteful Tit for Tat~\cite{prison}. The Meta
+strategies~\cite{axelrodproject} create a team of strategies for themselves and
+play as an ensemble or some other combination of the team.
+The distributions of the normalised rank in probabilistic ending tournaments,
+shown in Figure~\ref{fig:probend_results}, are less variant than those of noisy
+tournaments. The medians of the top 15 strategies are lower than 0.1 and the
+distributions are skewed towards 0. The strategies have overall performed well
+in the probabilistic ending tournaments that they participated.
+
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=.6\textwidth]{../images/probend_performance_subset.pdf}
+    \caption{\(r\) distributions for best performed strategies in 1139 probabilistic ending
+    tournaments with \(p_e < 0.1\).}
+    \label{fig:probend_results}
+\end{figure}
 
 In tournaments with both noise and an unspecified number of turns several of the
 top ranked strategies are strategies that were highly ranked in noisy
 tournaments. However, strategies from the top ranks in probabilistic ending
-tournaments did not rank highly here. Other strategies include $\pi$, $\phi$
-which are based on the same approach as $e$. The distributions of \(r\) shown in
-Figure~\ref{fig:noisy_probend_results} have the largest median values compared
-to the top rank strategies of the other tournament types. A subset of noisy
-probabilistic ending tournaments has been considered such that \(p_e < 0.1\) and
-\(p_n < 0.5\). The top ranked strategies are given in
-Table~\ref{table:subset_probend_noise_result} and it is shown that the Meta
-strategies which performed well in noisy tournaments with \(p_n < 0.5\), perform
-well once again even the number of turns is not specified. Moreover, several
-strategies that did well in probabilistic ending tournaments such as Fortress 3,
-Fortress 4, Defector and Better and Better are effective here as well.
+tournaments did not rank highly here.
+
+The distributions of \(r\) shown in Figure~\ref{fig:noisy_probend_results} have
+the largest median values compared to the top rank strategies of the other
+tournament types. A subset of noisy probabilistic ending tournaments has been
+considered such that \(p_e < 0.1\) and \(p_n < 0.1\). The top ranked strategies
+are given in Table~\ref{table:subset_probend_noise_result} and it is shown that
+the Meta strategies which performed well in noisy tournaments with \(p_n <
+0.1\), perform well once again even the number of turns is not specified.
+Moreover, several strategies that did well in probabilistic ending tournaments
+such as Fortress 4, MEM2 and Spiteful Tit For Tat.
 
 \begin{figure}[!htbp]
     \centering
@@ -516,9 +461,9 @@ Fortress 4, Defector and Better and Better are effective here as well.
 
 \begin{table}[!htbp]
     \centering
-    \resizebox{.30\textwidth}{!}{
+    \resizebox{.27\textwidth}{!}{
     \input{performance_probend_noise_subset_table.tex}}
-    \caption{Top performances in 568 probabilistic ending tournaments with \(p_e < 0.1\) and \(p_n < 0.5\).}
+    \caption{Top performances in 117 probabilistic ending tournaments with \(p_e < 0.1\) and \(p_n < 0.1\).}
     \label{table:subset_probend_noise_result}
 \end{table}
 
@@ -526,20 +471,28 @@ Up till now, the performances of the \numberofstrategies strategies have been ev
 individual tournament types. The distributions of \(r\) for the tournament types indicate that
 for probabilistic ending and standard tournaments successful strategies do exist.
 For these settings, the top 15 strategies have frequently ranked in
-the top spots with only a few exceptions. Contrarily, it appears that noise
-cause variation in the normalised ranks, and the strategies can always guarantee
-a spot in the top ranks.
+the top spots with only a few exceptions. The behaviour of the winning strategies
+in probabilistic ending tournaments vary when \(p_e\) is restricted to 0.1.
+For larger values of \(p_e\) the dominant strategies are defecting strategies,
+and in comparison for smaller values the dominant strategies are evolved
+and strategies based on teams. Similarly, in noisy tournaments the behaviour
+of the dominant strategies varied when the probability of noisy was restricted
+to 0.1. In noise tournaments with \(p_n \in [0, 1]\) there is much variation
+in the normalised ranks, and the strategies can always guarantee a spot in the
+top ranks. However, in the restricted case the dominant strategies are strategies
+specifically trained for noise tournaments.
 
 The data set considered in this work, described in
-Section~\ref{section:data_collection}, contains a total of \numberofalltournaments
-tournament results. For this part of the manuscript the strategies are ranked
-based on the median normalised rank they achieved over the entire data set.
-The top 15 strategies are given in Table~\ref{table:overall_results}
-and their normalised rank distributions are given in Figure~\ref{fig:overall_results}.
+Section~\ref{section:data_collection}, contains a total of
+\numberofalltournaments tournament results. For this part of the manuscript the
+strategies are ranked based on the median normalised rank they achieved over the
+entire data set. The top 15 strategies are given in
+Table~\ref{table:overall_results} and their normalised rank distributions are
+given in Figure~\ref{fig:overall_results}.
 
 \begin{table}[!htbp]
     \centering
-    \resizebox{.35\textwidth}{!}{
+    \resizebox{.27\textwidth}{!}{
     \input{performance_merged_table.tex}}
     \caption{Top performances over all the tournaments}\label{table:overall_results}
 \end{table}
@@ -666,6 +619,8 @@ of each tournament are also included, and finally the number of turns, the
 number of strategies, the number of repetitions and the probabilities of noise
 and the game ending are also included.
 
+\textbf{Evaluation based on correlation.}
+
 Table~\ref{table:correlations} shows the correlation coefficients between the
 features of Table~\ref{table:manual_features} the median score and the median
 normalised rank. Note that the correlation for the classifiers is
@@ -728,24 +683,12 @@ tournaments.
     ending tournaments.}\label{fig:c_r_distributions}
 \end{figure}
 
-\newcolumntype{g}{>{\columncolor{Gray}}c}
-\begin{table}[h]
-    \begin{center}
-\resizebox{.8\textwidth}{!}{
-    \input{regression_table.tex}}
-    \end{center}
-\end{table}
+\textbf{Evaluation based on clustering and random forest.}
 
-To further explore the features that contribute to a strategy's success the
-performances are divided into clusters based on whether they were successful or
-not. A random forest approach~\cite{breiman2001} is then applied to each
-performance to predict the cluster to which it has been assigned to. This allows
-for the importance of each feature in the classification to be calculated. In
-essence, to calculate which are the important features when one is trying to
-predict whether a performance was successful or not.
-
-The performances are clustered into successful and unsuccessful clusters based on
-4 different approaches. More specifically:
+A second approach for evaluating the features importance in a strategy's success
+is a combination of clustering and a random forest algorithm. Initially,
+the strategies performances are clustered four different time based on the
+following approaches:
 
 \begin{itemize}
     \item \textbf{Approach 1:} The performances are divided into two clusters based
@@ -763,8 +706,11 @@ The performances are clustered into successful and unsuccessful clusters based o
     coefficients~\cite{Rousseeuw1987}.
 \end{itemize}
 
-The random forest method constructs many individual decision trees and the
-predictions from all trees are pooled to make the final prediction. The random
+Once the performances have been assigned to a cluster for each approach a
+random forest algorithm~\cite{breiman2001} is applied. The problem is a supervised
+problem where the random forest algorithm predicts the cluster to which a performance
+has been assigned to using the features of Table~\ref{table:manual_features}.
+The random
 forest models are trained on a training set of 70\% of the tournaments results.
 The accuracy of each model based on $R^2$ and the number of clusters for each
 tournament type (because in the case of Approach 4 it is not
@@ -812,7 +758,7 @@ and the OOB error indicate that the model is not over fitting.
 \end{table}
 
 The importance that the features of Table~\ref{table:manual_features} had on
-each random forest model while the perfomances were clustered based on the
+each random forest model while the performances were clustered based on the
 different approaches have been
 calculated and are given by Figures~\ref{fig:clustering_importance_standard},
 \ref{fig:clustering_importance_noise},~\ref{fig:clustering_importance_probend},
@@ -969,7 +915,30 @@ random forest analysis were $C_{r} / C_{median}$ and $C_r / C_{mean}$.
     clustering methods.}\label{fig:clustering_importance_overall}
 \end{figure}
 
-The effect of both these features can be further explored. In
+\textbf{Evaluation based on linear regression.}
+
+A multivariate linear regression is also fitted to model the relationship of the
+features and the normalised rank. The \(p-\)values of each feature as well as
+their coefficients are given by Table~\ref{table:linear_regression}. The
+coefficient of determination \(R\) squared fo each model is also report in
+Table~\ref{table:linear_regression}. Based on \(R\) square the model explain 90\% of
+the variability of the response data around its mean.
+
+\newcolumntype{g}{>{\columncolor{Gray}}c}
+\begin{table}[h]
+    \begin{center}
+\resizebox{.8\textwidth}{!}{
+    \input{regression_table.tex}}
+    \end{center}
+    \caption{Multivariate linear regression with \(r\) as the depended variable results.}
+    \label{table:linear_regression}
+\end{table}
+
+The results of the linear regression verify the results of the previous approaches.
+
+The features $C_{r} / C_{median}$ and $C_r / C_{mean}$ have been repeatably
+highlighted as importance feature in explaining the variability of the performances.
+Thus the effect of these tow measures is further explored.In
 Figure~\ref{fig:mean_median_std} the distributions of \(C_r / C_{\text{mean}}\)
 and \(C_r / C_{\text{median}}\) are given for the winners in standard tournaments. A value of \(C_r /
 C_{\text{mean}} = 1\) imply that the cooperating ratio of the winner was the
