last line on section two

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -998,8 +998,8 @@ strategies prevail and this result is once again confirmed in this section.
 
 In this section the effect of several features, regarding a strategy's behaviour
 and the tournament in which it participated on its performance were presented.
-This was done using two approaches. Correlation coefficients and a random forest
-analysis. The results of these are summarised in the following section.
+This was done using three approaches. Correlation coefficients, a random forest
+analysis and a linear regression. The results of these are summarised in the following section.
 
 \section{Conclusion}\label{section:conclusion}
 
